Refactor package structure and update element imports for consistency